# rust-cli-sysinfo

./: .clippy.toml  .gitignore  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: feature-request.md  issue-report.md
.github/workflows/: build-macos-intel-test.yml  build-macos-test.yml  build-multiplatform-solution.yml  codeql.yml  mirror-release-to-codeberg.yml  mirror_to_codeberg.yml
src/: cli.rs  constants.rs  core.rs  main.rs  services.rs  services_template.rs  slot.rs
src/core/: context.rs  erased.rs  error.rs  meta.rs  registry.rs  utils.rs
src/presentation/: colors.rs  format.rs
src/services/: cpu.rs  cpu_model.rs  cpu_usage.rs  disk.rs  gpu.rs  hostname.rs  ip_address.rs  kernel.rs  load_avg.rs  memory.rs  os_name.rs  registry.rs  system.rs  template.rs  uptime.rs  users.rs
src/services/users/: linux.rs  macos.rs  windows.rs
