[package]
  name = "rust-cli-sysinfo"
  version = "0.5.0"
  edition = "2024"

[dependencies]
  lexopt = "0.3.2"
  pci-ids = "0.2.6"
  libc = "0.2"
  rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
  tempfile = "3"

[profile.release]
  lto = "thin"      # inter-crate dead code elimination
  strip = true      # remove debug symbols from the binary
  opt-level = 3
  codegen-units = 1 # maximize optimization at the cost of compile time

[lints.clippy]
  all = "warn"
  pedantic = "warn"
  cognitive_complexity = "warn"
  panic = "warn"