[package]
  name = "rust-cli-sysinfo"
  version = "0.9.0"
  edition = "2024"
  build = "build.rs"

[dependencies]
  lexopt = "0.3.2"
  pci-ids = "0.2.6"
  libc = "0.2"
  rustix = { version = "1", features = ["fs"] }
  thiserror = "2"                               # error handling
  utwt = "0.4"                                  # parse active users

[dev-dependencies]
  tempfile = "3"

[profile.release]
  lto = "thin"      # inter-crate dead code elimination
  strip = true      # remove debug symbols from the binary
  opt-level = 3
  codegen-units = 1 # maximize optimization at the cost of compile time

[lints.clippy]
  all = "warn"
  pedantic = "warn"
  cognitive_complexity = "warn"
  panic = "warn"