[package]
  name = "rust-cli-sysinfo"
  version = "0.12.0"
  edition = "2024"
  build = "build.rs"

[dependencies]
  lexopt = "0.3.2"
  libc = "0.2"

  # NOTE: sysinfo's native cross-platform GPU support (see services/gpu.rs) is merged on the
  # crate's `main` branch but not yet in a published release
  sysinfo = { version = "0.39", features = ["disk"] }
  local-ip-address = "0.6"
  thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
  utwt = "0.4"      # parse active/logged-in users
  pci-ids = "0.2.6" # GPU vendor/model lookup

[target.'cfg(target_os = "windows")'.dependencies]
  # Official Microsoft Rust/Win32 bindings; used for WTS session enumeration (active/logged-in
  # users)
  windows = { version = "0.62", features = ["Win32_Foundation", "Win32_System_RemoteDesktop"] }

[dev-dependencies]
  tempfile = "3"

[profile.release]
  lto = "thin"      # inter-crate dead code elimination
  strip = true      # remove debug symbols from the binary
  opt-level = 3
  codegen-units = 1 # maximize optimization at the cost of compile time

[lints.clippy]
  all = "warn"
  pedantic = "warn"
  cognitive_complexity = "warn"
  panic = "warn"